# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-celery.yml  docker-compose.yml  mypy.ini  prometheus-conf.yaml  pyproject.toml
scripts/: docker-entrypoint.sh
src/: conftest.py  pytest.ini
src/a12n/: apps.py  signals.py  urls.py  utils.py
src/a12n/api/: serializers.py  views.py
src/a12n/tests/: test_auth_views.py
src/app/: .env.ci  models.py  services.py  settings.py
src/app/admin/: README.md
src/app/api/: pagination.py  renderers.py
src/app/conf/: api.py  auth.py  boilerplate.py  caching.py  cors.py  db.py  env_reader.py  http.py  installed_apps.py  logs.py  media.py  middleware.py  sentry.py  static.py  storage.py  templates.py  third_party.py  timezone.py
src/app/fixtures/: __init__.py  api.py
src/app/management/commands/: makemigrations.py
src/app/middleware/: real_ip.py
src/app/testing/: __init__.py  api.py  runner.py
src/app/tests/: test_health.py  test_remote_addr_midlleware.py
src/app/urls/: __init__.py  v1.py
src/blog/: admin.py  apps.py  models.py  services.py  signals.py  urls.py
src/blog/api/: serializers.py  views.py  viewsets.py
src/blog/migrations/: 0001_initial.py  0002_add_lenght_restriction_for_description.py  0003_remove_image_label_field.py  0004_add_index_for_slug.py  0005_add_unique_constraint_for_article_tag_items.py  0006_add_article_likes.py  0007_article_constraints.py  0008_add_likes_field.py
src/blog/tests/: factories.py  test_api_views.py  test_caching.py  test_utils.py
src/blog/tests/test_caching/: conftest.py  test_integration.py  test_unit.py
src/blog/tests/utils/: files.py
src/blog/utils/: cache.py  images.py  reading_time.py
src/common/: exceptions.py  http_utils.py  images.py  orm_utils.py
src/common/rest_api/: api_view_error_mixin.py  deferred.py  exception_handler.py  utils.py
src/users/: urls.py
src/users/api/: serializers.py  viewsets.py
src/users/migrations/: 0001_init.py
src/users/tests/: factories.py  test_password_hashing.py  test_whoami.py
