[tool.poetry]
name = "glef1x.xyz.backend"
version = "0.1.0"
description = ""
authors = ["GLEF1X <glebgar567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
asgiref = "^3.6.0"
Django = { version = "^4.1.1", extras = ["argon2"] }
django-axes = "^5.40.1"
django-behaviors = "^0.5.1"
django-environ = "^0.9.0"
django-ipware = "^4.0.2"
django-split-settings = "^1.1.0"
django-storages = "^1.13.2"
djangorestframework-camel-case = "^1.3.0"
drf-spectacular = { extras = ["sidecar"], version = "^0.25.1" }
drf-spectacular-sidecar = "^2022.12.1"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
django-health-check = "^3.17.0"
psycopg2-binary = "^2.9.5"
django-baton = "^2.6.0"
djangorestframework-simplejwt = { extras = ["crypto"], version = "^5.2.1" }
django-cors-headers = "^3.13.0"
Pillow = "^9.2.0"
python-json-logger = "^2.0.4"
django-structlog = "^4.0.0"
django-extensions = "^3.2.1"
boto3 = "^1.26.36"
drf-extra-fields = "^3.4.1"
drf-writable-nested = "^0.7.0"
tldextract = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.0"
djangorestframework-stubs = "^1.7.0"
ruff = "^0.0.152"

[tool.ruff]
line-length = 120
extend-select = ["D"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]

[tool.ruff.per-file-ignores]
"**/migrations/**" = ["E501"]
"src/a12n/tests/test_auth_views.py" = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
